--- a/RallyFrontend/rally/src/assets/styles/admin_panel/admin_panel.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/admin_panel.css
@@ -19,7 +19,6 @@ aside {
 
 main {
   flex: 1;
-
   min-height: 100vh;
   height: auto;
   overflow: auto !important;
@@ -101,5 +100,9 @@ li {
 
 .menu_button:hover {
   transition-duration: 0.2s;
+  background-color: #cd104d;
+}
+
+.menu_button.active {
   background-color: #cd104d;
 }
