--- a/RallyFrontend/rally/src/assets/styles/admin_panel/competences.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/competences.css
@@ -169,3 +169,15 @@ span {
 .plus {
   font-size: 6vh;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  padding: 5vh;
+  overflow-x: scroll;
+}
