--- a/RallyFrontend/rally/src/assets/styles/admin_panel/entity_data.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/entity_data.css
@@ -1,3 +1,5 @@
+@import "../main.css";
+
 .container {
   flex-wrap: wrap;
   display: flex;
@@ -7,38 +9,37 @@
   padding: 0vh;
   width: 100%;
   height: auto;
-  justify-items: center;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .box {
-  color: #f9f9f9;
+  position: relative;
+  color: var(--fontcolor_dark);
   margin: 3%;
+  padding: 1vh;
   flex-grow: 2;
   flex-shrink: 1;
-  background-color: #d61c4e;
-  min-height: 40vh;
+  background-color: var(--secondary_background_color_dark);
+  min-height: 30vh;
   height: auto;
   width: 50vh;
   border-radius: 15px;
-  box-shadow: 1px 2px 10px 0px #cd104d;
+  box-shadow: 1px 2px 10px 0px #d61c4e;
   display: flex;
   flex-direction: column;
 }
 
-.new {
-  color: #f9f2ed;
+.new-box-container {
+  margin: 2vh;
+  height: auto;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.new-box {
+  color: var(--fontcolor_dark);
+  background-color: var(--secondary_background_color_dark);
   border: none;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  font-weight: 700;
-  letter-spacing: 0.2rem;
-  text-align: center;
+  border-radius: 5rem;
   outline: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
@@ -46,30 +47,21 @@
     -2px -2px 4px rgba(255, 255, 255, 0.5),
     2px 2px 2px rgba(255, 255, 255, 0.075), 2px 2px 4px rgba(0, 0, 0, 0.1);
   -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
+  -ms-user-select: none; /* IE*/
   user-select: none;
-  align-self: self-start;
 }
 
-.new span * {
-  font-size: 2rem;
+.new-box h2 {
+  font-size: 1rem;
+  font-weight: 700;
 }
 
-.new:hover {
-  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
-    -6px -6px 10px rgba(255, 255, 255, 0.5),
-    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
-}
-
-.new:active {
-  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.7),
-    inset -2px -2px 4px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 2px rgba(255, 255, 255, 0.075),
-    inset 2px 2px 4px rgba(0, 0, 0, 0.15);
+.new-box .plus {
+  font-size: 3rem;
 }
 
 .info-element {
-  background-color: #323232;
+  background-color: var(--backgroundcolor_dark);
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -106,7 +98,7 @@ a {
   position: relative;
   padding: 0.25rem 1rem;
   text-decoration: none;
-  color: #fff;
+  color: var(--fontcolor_dark);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -135,7 +127,7 @@ a.wave-link {
 }
 a.wave-link:before {
   content: "";
-  background: #fff;
+  background: var(--input_bordercolor_dark);
   position: absolute;
   width: 100%;
   height: 1px;
@@ -149,7 +141,7 @@ a.wave-link:before {
   left: 0;
   pointer-events: none;
   fill: none;
-  stroke: #fff;
+  stroke: var(--input_bordercolor_dark);
   stroke-width: 1px;
 }
 .link__graphic--slide {
@@ -162,22 +154,38 @@ a.wave-link:hover .link__graphic--slide {
   transform: translate3d(50%, 0, 0);
 }
 
-span {
-  padding-left: 2vh;
+.box span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.plus {
-  font-size: 6vh;
+.box span h2 {
+  margin: 2vh;
+}
+
+.edit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: large;
+  width: auto;
+  margin: 1vh;
 }
 
 .overlay {
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
+  z-index: 99;
   padding: 5vh;
   overflow-x: scroll;
 }
