--- a/RallyFrontend/rally/src/assets/styles/admin_panel/menu_item_header.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/menu_item_header.css
@@ -1,16 +1,17 @@
+@import "../main.css";
+
 .header {
-  width: 95%;
+  width: 100%;
   height: auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  padding: 2vh;
-  padding-bottom: 0;
 }
 
 .header h2 {
   flex: 0;
   flex-basis: 30%;
+  font-size: 4vh;
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -19,48 +20,23 @@
   letter-spacing: 0.5vh;
   font-variant-caps: all-small-caps;
 }
-
-.header .query_elements {
-  flex: 1;
-  flex-basis: 60%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+.custom-select {
+  width: 70%;
+  height: 7vh;
+  margin-top: 3vh;
+  color: black;
+  background-color: var(--input_backgroundcolor_dark);
+  border: 1px solid #ced4da;
+  border-radius: 1vh;
+  border-color: var(--secondary_input_bordercolor_dark);
+  box-shadow: 0 0 0 0.01rem var(--secondary_input_bordercolor_dark);
+  transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-.header .query_elements input {
-  width: 90%;
-  height: 3.5vh;
-  margin-right: 1vh;
-  border-radius: 12px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  border-style: none;
-
-  font-size: medium;
-  padding-left: 1vh;
-
-  -moz-box-shadow: 2px 2px 0px #cd104d;
-  -webkit-box-shadow: 2px 2px 0px #cd104d;
-  box-shadow: 2px 2px 0px #cd104d;
+.custom-select:hover {
+  box-shadow: 0 0 0 0.2rem var(--secondary_input_bordercolor_dark);
 }
 
-.header .query_elements button {
-  background-color: #cd104d;
-  color: #f9f2ed;
-  height: 100%;
-  width: auto;
-  border-radius: 12px;
-  border-style: none;
-}
-.header .query_elements button:hover {
-  box-shadow: 2px 2px 0px #f97b22;
-  border-radius: 15px;
-}
-.header .query_elements button span * {
-  height: 100%;
-  padding: 0.5vh;
-  font-size: large;
-  width: auto;
+.custom-select:hover {
+  border-color: var(--input_bordercolor_dark);
 }
