--- a/RallyFrontend/rally/src/assets/styles/admin_panel/admin_panel.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/admin_panel.css
@@ -2,6 +2,7 @@
 
 .admin-panel {
   display: flex;
+  padding: 0;
   height: 100vh;
   background-color: var(--backgroundcolor_dark);
 }
@@ -25,8 +26,11 @@ main {
   flex: 1;
   min-height: 100vh;
   height: auto;
+  margin: 0;
+  padding: 0;
   overflow: auto !important;
   background-color: var(--backgroundcolor_dark);
+  transition: width 0.3s ease;
 }
 
 li {
@@ -113,7 +117,7 @@ li {
 }
 
 .menu-toggle-button {
-  position: absolute;
+  position: block;
   margin: 1vh;
   z-index: 100;
   border: none;
@@ -143,10 +147,6 @@ li {
   display: none;
   opacity: 0;
   pointer-events: none;
-}
-
-main {
-  transition: width 0.3s ease;
 }
 
 .full-width {
