--- a/RallyFrontend/rally/src/assets/styles/admin_panel/fragments/menu_item_header.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/fragments/menu_item_header.css
@@ -23,6 +23,7 @@
 .custom-select {
   width: 70%;
   height: 7vh;
+  padding: 1vh;
   margin-top: 3vh;
   color: black;
   background-color: var(--input_backgroundcolor_dark);
