--- a/RallyFrontend/rally/src/assets/styles/admin_panel/fragments/menu_item_header.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/fragments/menu_item_header.css
@@ -16,7 +16,7 @@
   justify-items: center;
   align-items: center;
   font-weight: 600;
-  color: #f9f2ed;
+  color: var(--secondary_fontcolor_dark);
   letter-spacing: 0.5vh;
   font-variant-caps: all-small-caps;
 }
@@ -25,13 +25,21 @@
   height: 7vh;
   padding: 1vh;
   margin-top: 3vh;
-  color: black;
+  color: var(--fontcolor_dark);
   background-color: var(--input_backgroundcolor_dark);
   border: 1px solid #ced4da;
   border-radius: 1vh;
   border-color: var(--secondary_input_bordercolor_dark);
   box-shadow: 0 0 0 0.01rem var(--secondary_input_bordercolor_dark);
   transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  -webkit-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  -moz-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  -ms-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  -o-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.custom-select::placeholder{
+  color: var(--fontcolor_dark);
 }
 
 .custom-select:hover {
