--- a/RallyFrontend/rally/src/assets/styles/main.css
+++ b/RallyFrontend/rally/src/assets/styles/main.css
@@ -2,15 +2,15 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap");
 
 :root {
-  /*Darkmode*/
-  --backgroundcolor_dark: #242529 !important;
+  --backgroundcolor_dark: #ffffff !important;
+  --aside-backgroundcolor_dark: #093C71 !important;
   --fontcolor_dark: #e6e2de;
-  --input_backgroundcolor_dark: #ffffff;
-  --menu_buttoncolor_dark: #363538;
+  --secondary_fontcolor_dark: #242529;
+  --input_backgroundcolor_dark: #242529 ;
+  --menu_buttoncolor_dark: #242529;
   --input_bordercolor_dark: #e6e6ec;
-  --input_bordercolor_dark: #e6e6ec;
-  --secondary_input_bordercolor_dark: #d61c4e;
-  --secondary_background_color_dark: #cd104d;
+  --secondary_input_bordercolor_dark: #F35727;
+  --secondary_background_color_dark: #F35727;
 }
 
 #app {
@@ -30,4 +30,12 @@ body {
 
 li {
   list-style: none;
+}
+
+h2{
+  text-transform: capitalize;
+}
+
+p{
+  text-transform: capitalize;
 }
