--- a/RallyFrontend/rally/src/assets/styles/admin_panel/entity_data.css
+++ b/RallyFrontend/rally/src/assets/styles/admin_panel/entity_data.css
@@ -1,11 +1,12 @@
 @import "../main.css";
 
 .container {
-  flex-wrap: wrap;
-  display: flex;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-height: 110vh;
+  grid-gap: 0vh 2vh;
+  justify-content: space-around;
   padding: 0vh;
   width: 100%;
   height: auto;
@@ -21,7 +22,7 @@
   background-color: var(--secondary_background_color_dark);
   min-height: 30vh;
   height: auto;
-  width: 50vh;
+  width: auto;
   border-radius: 15px;
   box-shadow: 1px 2px 10px 0px #d61c4e;
   display: flex;
@@ -160,3 +161,4 @@
 .breadcrumbInput:focus {
   outline: none;
 }
+
