--- a/RallyFrontend/rally/src/assets/styles/login_styles/login.css
+++ b/RallyFrontend/rally/src/assets/styles/login_styles/login.css
@@ -36,7 +36,7 @@ form input {
   border-style: none;
   border-radius: 20px;
   padding-left: 3vh;
-  color: #56575c;
+  color: #f4f4f4;
 }
 
 form input::placeholder {
@@ -90,4 +90,17 @@ form a {
 
 form a:hover {
   color: #f0f0f0;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(205, 197, 197, 0.5); 
+  z-index: 1000; 
 }
